feat: Add ddd-clean-architecture test execution to workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -101,6 +101,11 @@ jobs:
         cd test/clean-architecture
         go test -v ./...
 
+    - name: Run ddd-clean-architecture tests
+      run: |
+        cd test/ddd-clean-architecture
+        go test -v ./...
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
